# supabase-py

./: .gitmodules  pyproject.toml
