[tool.poetry]
name = "supabase"
version = "0.0.3"
description = "Supabase client for Python."
authors = ["Joel Lee <joel@joellee.org>", "Leon Fedden <leonfedden@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
postgrest-py = {path = "../postgrest-py", develop = true}
realtime-py = "^0.1.2"
gotrue = {path = "../gotrue-py", develop = true}
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pre_commit = "^2.1.0"
black = "^21.7b0"
pytest = "^6.2.5"


[build-system]
requires = ["poetry>=0.12", "setuptools>=30.3.0,<50"]
build-backend = "poetry.masonry.api"
